--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EsimJsim</string>
+    <string name="nav_Home">Home</string>
+    <string name="nav_Like">Like</string>
+    <string name="nav_Safety">Hospital</string>
+    <string name="nav_More">More</string>
+    <string name="facebook_app_id">2698538870172464</string>
 </resources>
